--- a/web/all/src/main/webapp/apa.xhtml
+++ b/web/all/src/main/webapp/apa.xhtml
@@ -23,12 +23,12 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:h="http://java.sun.com/jsf/html">
 
 <h:body>
 <f:view>
         <h2>apa</h2>
-
+          #{helloWorld.greeting}
 </f:view>
 </h:body>
 </html>
