--- a/web/all/src/main/webapp/helloWorld.xhtml
+++ b/web/all/src/main/webapp/helloWorld.xhtml
@@ -21,22 +21,25 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+        >
 <h:head>
-    <title>Hello World</title>
+    <title></title>
 </h:head>
 <h:body>
     <h:outputStylesheet name="style.css" library="css"/>
     <div id="container">
-        <h1>JSF/DS Hello World!!</h1>
+        <h1>JSF/DS Hello World!! #{helloWorldController2.hello}</h1>
         <h:form id="mainForm">
             <h:panelGrid columns="2">
                 <h:outputLabel for="name" value="Please enter your name"/>
-                <h:inputText id="name" value="#{helloWorld.name}" required="true"/>
+                <h:inputText id="name" value="#{helloWorld2.name}" required="true"/>
             </h:panelGrid>
             <h:commandButton value="Press me" action="#{helloWorld.send}"/><br/>
             <h:messages showDetail="true" showSummary="false"/>
         </h:form>
     </div>
+
+
+    <h1>asdasd</h1>
 </h:body>
 </html>
