--- a/web/src/main/webapp/pages/admin/group/groups.xhtml
+++ b/web/src/main/webapp/pages/admin/group/groups.xhtml
@@ -24,50 +24,79 @@
                 template="/WEB-INF/template/template.xhtml">
 
     <ui:define name="content">
+        <style>
+            .ui-datatable .ui-column-filter {
+                display: inline;
+                float: left;
+                vertical-align: bottom;
+            }
 
+            .ui-inputfield {
+                padding-bottom: 6px;
+            }
+            .ui-filter-column {
+                border:1px;
+                border-color: gainsboro;
+            }
+        </style>
+        <h1>Groups</h1>
 
         <h:form id="groups-form">
-        <div style="float: right">
+            <div style="float: right">
 
-            <h:panelGroup id="group-details-container">
+                <h:panelGroup id="group-details-container">
 
+                    #{groupBean.selectedGroup.createdBy}
 
-                #{groupBean.selectedGroup.createdBy}
-
-                Permissions:
-                <ui:repeat value="#{groupBean.selectedGroup.permissions}" var="permission" >
-                    #{permission.name}
-
-                </ui:repeat>
-
-            </h:panelGroup>
-        </div>
-            <p:dataTable value="#{groupBean.groupDataModel}" var="group" style="width: 50%" id="selectGroupTable"
-                         styleClass="one-col-table one-col" selection="#{groupBean.selectedGroup}" selectionMode="single">
-
-                <f:facet name="header">
-                    <div style="background: #f5f5f5; text-align: left">
-                        <p:commandButton action="#{groupBean.update}" value="Update" update="selectGroupTable"/>
+                    <div style="width: 500px;">
+                        <div><h3>Permissions</h3></div>
+                        <p:dataList value="#{groupBean.selectedGroup.permissions}" var="permission" itemType="disc"
+                                    style="width: 400px;">
+                        <p>#{groupBean.getText(permission)}</p>
+                        </p:dataList>
                     </div>
-                </f:facet>
+                </h:panelGroup>
+            </div>
+            <p:dataTable value="#{groupBean.groupDataModel}" var="group" style="width: 50%" id="selectGroupTable"
+                         styleClass="one-col-table" selection="#{groupBean.selectedGroup}" selectionMode="single">
 
                 <p:ajax event="rowSelect" update="@form"/>
 
                 <p:column id="group-name" filterBy="#{group.name}" filterMatchMode="contains">
-                    <f:facet name="header" >
-                        <div style="text-align: left">Name</div>
+                    <f:facet name="header">
+                        <p:commandButton action="#{groupBean.update}" value="Edit" update="@all" actionListener="#{groupBean.editSelected}"
+                                         style="right: 20%; height: 110%"/>
                     </f:facet>
 
-                    <h:outputText value="#{group.name}" />
+                    <h:outputText value="#{group.name}"/>
                 </p:column>
 
             </p:dataTable>
 
 
-
             <p:messages/>
         </h:form>
 
+        <h:form>
+            <div class="part-container">
+
+                <div style="float: right"><span class="label">Add permissions:</span>
+                    <p:tree value="#{groupBean.root}" var="node" id="tree" selectionMode="checkbox"
+                            style="width: 500px;"
+                            propagateSelectionUp="false" selection="#{groupBean.selectedPermissions}">
+                        <p:treeNode id="treeNode">
+                            <h:outputText value="#{node.name}" id="lblNode"/>
+                        </p:treeNode>
+                    </p:tree>
+                </div>
+
+                <div><p class="label">Name</p> <p:inputText value="#{groupBean.groupDTO.name}"/></div>
+
+            </div>
+            <p:commandButton value="Create Group" action="#{groupBean.createGroup}"/>
+
+            <p:messages/>
+        </h:form>
 
     </ui:define>
 </ui:composition>
