--- a/web/src/main/webapp/pages/admin/group/groups.xhtml
+++ b/web/src/main/webapp/pages/admin/group/groups.xhtml
@@ -34,7 +34,7 @@
             .ui-inputfield {
                 padding-bottom: 6px;
             }
-            .ui-filter-column {
+            .ui-filter-column, th.ui-state-default {
                 border:1px;
                 border-color: gainsboro;
             }
@@ -42,22 +42,7 @@
         <h1>Groups</h1>
 
         <h:form id="groups-form">
-            <div style="float: right">
-
-                <h:panelGroup id="group-details-container">
-
-                    #{groupBean.selectedGroup.createdBy}
-
-                    <div style="width: 500px;">
-                        <div><h3>Permissions</h3></div>
-                        <p:dataList value="#{groupBean.selectedGroup.permissions}" var="permission" itemType="disc"
-                                    style="width: 400px;">
-                        <p>#{groupBean.getText(permission)}</p>
-                        </p:dataList>
-                    </div>
-                </h:panelGroup>
-            </div>
-            <p:dataTable value="#{groupBean.groupDataModel}" var="group" style="width: 50%" id="selectGroupTable"
+            <p:dataTable value="#{groupBean.groupDataModel}" var="group" style="width: 75%" id="selectGroupTable"
                          styleClass="one-col-table" selection="#{groupBean.selectedGroup}" selectionMode="single">
 
                 <p:ajax event="rowSelect" update="@form"/>
@@ -71,32 +56,15 @@
                     <h:outputText value="#{group.name}"/>
                 </p:column>
 
+                <p:column id="groupLatestMember" headerText="Last Added" style="width: 40px;">
+                    <h:outputText value="#{group.name}"/>
+                </p:column>
+
             </p:dataTable>
-
-
             <p:messages/>
         </h:form>
 
-        <h:form>
-            <div class="part-container">
 
-                <div style="float: right"><span class="label">Add permissions:</span>
-                    <p:tree value="#{groupBean.root}" var="node" id="tree" selectionMode="checkbox"
-                            style="width: 500px;"
-                            propagateSelectionUp="false" selection="#{groupBean.selectedPermissions}">
-                        <p:treeNode id="treeNode">
-                            <h:outputText value="#{node.name}" id="lblNode"/>
-                        </p:treeNode>
-                    </p:tree>
-                </div>
-
-                <div><p class="label">Name</p> <p:inputText value="#{groupBean.groupDTO.name}"/></div>
-
-            </div>
-            <p:commandButton value="Create Group" action="#{groupBean.createGroup}"/>
-
-            <p:messages/>
-        </h:form>
 
     </ui:define>
 </ui:composition>
