--- a/web/src/main/webapp/index.xhtml
+++ b/web/src/main/webapp/index.xhtml
@@ -25,7 +25,7 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <f:metadata>
-        <f:viewAction action="#{navigationBean.navigateDefault}"/>
+        <f:viewAction action="#{navigationBean.getNavigateDefault()}"/>
     </f:metadata>
 
     <ui:define name="content">
