--- a/web/src/main/webapp/pages/admin/group/groupSetup.xhtml
+++ b/web/src/main/webapp/pages/admin/group/groupSetup.xhtml
@@ -21,7 +21,7 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core"
-                template="/WEB-INF/template/template.xhtml">
+                template="template.xhtml">
 
     <ui:define name="content">
 
