--- a/web/src/main/webapp/pages/admin/user/userSetup.xhtml
+++ b/web/src/main/webapp/pages/admin/user/userSetup.xhtml
@@ -34,6 +34,7 @@
 
         <h:form>
 
+            <h:outputText value="test" rendered="#{pageContext.page.delete}"/>
                 <div style="float: left; margin-right: 40px">
 
 
